build_output.txt
   Compiling jl-sys v0.26.1
   Compiling jlrs-macros v0.5.0
   Compiling jlrs-sys v0.1.0
warning: neuro-spike-kernels@0.9.2: ✓ compiled spiking_network.cu → spiking_network_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled vector_similarity.cu → vector_similarity_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled satsolver.cu → satsolver_sm_120.ptx (PTX version patched to 8.5)
   Compiling jlrs v0.22.1
   Compiling neuro-spike-core v0.9.2 (/home/raulmc/ship_of_theseus_rs/neuro-spike/neuro-spike-core)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nvml`
  --> neuro-spike/neuro-spike-core/src/telemetry/nvml_telemetry.rs:44:22
   |
44 |         let device = nvml::Device::by_index(0)?;
   |                      ^^^^ use of unresolved module or unlinked crate `nvml`
   |
   = help: if you wanted to use a crate named `nvml`, use `cargo add nvml` to add it to your `Cargo.toml`
help: consider importing one of these items
   |
 6 + use candle_core::Device;
   |
 6 + use cust::prelude::Device;
   |
 6 + use nvml_wrapper::Device;
   |
help: if you import `Device`, refer to it directly
   |
44 -         let device = nvml::Device::by_index(0)?;
44 +         let device = Device::by_index(0)?;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nvml`
  --> neuro-spike/neuro-spike-core/src/telemetry/nvml_telemetry.rs:56:46
   |
56 |         let temperature = device.temperature(nvml::TemperatureSensor::Gpu)? as f32;
   |                                              ^^^^ use of unresolved module or unlinked crate `nvml`
   |
   = help: if you wanted to use a crate named `nvml`, use `cargo add nvml` to add it to your `Cargo.toml`
help: consider importing this enum
   |
 6 + use nvml_wrapper::enum_wrappers::device::TemperatureSensor;
   |
help: if you import `TemperatureSensor`, refer to it directly
   |
56 -         let temperature = device.temperature(nvml::TemperatureSensor::Gpu)? as f32;
56 +         let temperature = device.temperature(TemperatureSensor::Gpu)? as f32;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nvml`
  --> neuro-spike/neuro-spike-core/src/telemetry/nvml_telemetry.rs:57:48
   |
57 |         let clock_graphics = device.clock_info(nvml::Clock::Graphics)? as f32;
   |                                                ^^^^ use of unresolved module or unlinked crate `nvml`
   |
   = help: if you wanted to use a crate named `nvml`, use `cargo add nvml` to add it to your `Cargo.toml`
help: consider importing this enum
   |
 6 + use nvml_wrapper::enum_wrappers::device::Clock;
   |
help: if you import `Clock`, refer to it directly
   |
57 -         let clock_graphics = device.clock_info(nvml::Clock::Graphics)? as f32;
57 +         let clock_graphics = device.clock_info(Clock::Graphics)? as f32;
   |

error[E0308]: mismatched types
   --> neuro-spike/neuro-spike-core/src/snn/engine.rs:438:25
    |
438 |         self.apply_stdp(&raw_stimuli, dopamine_lr);
    |              ---------- ^^^^^^^^^^^^ expected an array with a size of 8, found one with a size of 4
    |              |
    |              arguments to this method are incorrect
    |
note: method defined here
   --> neuro-spike/neuro-spike-core/src/snn/engine.rs:522:8
    |
522 |     fn apply_stdp(&mut self, _raw_stimuli: &[f32; NUM_INPUT_CHANNELS], dopamine_lr: f32) {
    |        ^^^^^^^^^^            ----------------------------------------

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nvml`
  --> neuro-spike/neuro-spike-core/src/telemetry/nvml_telemetry.rs:41:9
   |
41 |         nvml::init()?;
   |         ^^^^ use of unresolved module or unlinked crate `nvml`
   |
   = help: if you wanted to use a crate named `nvml`, use `cargo add nvml` to add it to your `Cargo.toml`

error[E0063]: missing fields `clock_mhz`, `clock_z_score`, `power_z_score` and 1 other field in initializer of `GpuTelemetry`
   --> neuro-spike/neuro-spike-core/src/ai/researcher.rs:253:25
    |
253 |             let telem = GpuTelemetry {
    |                         ^^^^^^^^^^^^ missing `clock_mhz`, `clock_z_score`, `power_z_score` and 1 other field

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nvml`
  --> neuro-spike/neuro-spike-core/src/telemetry/nvml_telemetry.rs:17:20
   |
17 |     device: Option<nvml::Device>,
   |                    ^^^^ use of unresolved module or unlinked crate `nvml`
   |
   = help: if you wanted to use a crate named `nvml`, use `cargo add nvml` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nvml`
   --> neuro-spike/neuro-spike-core/src/telemetry/nvml_telemetry.rs:206:23
    |
206 |     NvmlError(#[from] nvml::NvmlError),
    |                       ^^^^ use of unresolved module or unlinked crate `nvml`
    |
    = help: if you wanted to use a crate named `nvml`, use `cargo add nvml` to add it to your `Cargo.toml`

Some errors have detailed explanations: E0063, E0308, E0433.
For more information about an error, try `rustc --explain E0063`.
error: could not compile `neuro-spike-core` (lib) due to 8 previous errors
